初始化脚本

--- a/quartz-distributed/src/main/resources/application.properties
+++ b/quartz-distributed/src/main/resources/application.properties
@@ -2,6 +2,9 @@ server.port=7070
 
 spring.application.name=quartz-distributed
 
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:db/migration/202007/V20200705_213701__quartz_distriuted.sql
+
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
