1、jar包引入方式 2、设置默认数据库

--- a/demo-sharding-sphere/src/main/resources/application-sharding-standard.properties
+++ b/demo-sharding-sphere/src/main/resources/application-sharding-standard.properties
@@ -1,5 +1,7 @@
 # \u6570\u636E\u6E90\u914D\u7F6E
 spring.shardingsphere.datasource.names=ds0,ds1
+# \u9ED8\u8BA4\u6570\u636E\u5E93\uFF1A\u9488\u5BF9\u4E0D\u5206\u5E93\u548C\u5206\u8868\u5904\u7406
+spring.shardingsphere.sharding.default-data-source-name=ds0
 
 spring.shardingsphere.datasource.ds0.type=com.alibaba.druid.pool.DruidDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=com.mysql.cj.jdbc.Driver
