自定义分表算法

--- a/spring-config-server/src/main/resources/application.properties
+++ b/spring-config-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8888
 
-# \u6307\u5B9A\u4ECE\u672C\u5730\u8BFB\u53D6\u914D\u7F6E\uFF0C\u8BFB\u53D6\u7684\u8DEF\u5F84\u4E3Aclasspath\u4E0B\u7684shared\u76EE\u5F55
-spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=classpath:shared
+# \u6307\u5B9A\u4ECEgit\u8BFB\u53D6\u914D\u7F6E
+spring.cloud.config.server.git.uri=git://127.0.0.1/songjy/config-repo.git
+#spring.cloud.config.server.git.username=admin
+#spring.cloud.config.server.git.password=admin
