--- a/demo-sharding-sphere/src/main/resources/application-sharding-standard.properties
+++ b/demo-sharding-sphere/src/main/resources/application-sharding-standard.properties
@@ -21,32 +21,18 @@ spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expres
 spring.shardingsphere.sharding.binding-tables=t_order,t_order_item
 
 # t_order\u5206\u8868\u914D\u7F6E
-spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{0..1}
+spring.shardingsphere.sharding.tables.t_order.actual-data-nodes=ds$->{0..1}.t_order$->{2020..2030}_$->{1..12}_$->{1..31}
 # \u5206\u7247\u952E\u8BBE\u7F6E
-spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.sharding-column=order_id
-spring.shardingsphere.sharding.tables.t_order.table-strategy.inline.algorithm-expression=t_order$->{order_id % 2}
+spring.shardingsphere.sharding.tables.t_order.table-strategy.complex.sharding-columns=user_id,order_id
+spring.shardingsphere.sharding.tables.t_order.table-strategy.complex.algorithm-class-name=com.songjy.sharding.sphere.config.ShardingTableAlgorithm
 spring.shardingsphere.sharding.tables.t_order.key-generator.column=id
 spring.shardingsphere.sharding.tables.t_order.key-generator.type=SNOWFLAKE
 
 # t_order_item\u5206\u8868\u914D\u7F6E
-spring.shardingsphere.sharding.tables.t_order_item.actual-data-nodes=ds$->{0..1}.t_order_item$->{0..1}
+spring.shardingsphere.sharding.tables.t_order_item.actual-data-nodes=ds$->{0..1}.t_order_item$->{2020..2030}_$->{1..12}_$->{1..31}
 # \u5206\u7247\u952E\u8BBE\u7F6E
-spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.sharding-column=order_id
-spring.shardingsphere.sharding.tables.t_order_item.table-strategy.inline.algorithm-expression=t_order_item$->{order_id % 2}
-
-# \u5E7F\u64AD\u8868
-spring.shardingsphere.sharding.broadcast-tables=t_province
-
-# \u6CBB\u7406\u5B9E\u4F8B\u540D\u79F0
-spring.shardingsphere.orchestration.demo_ds_sharding.orchestration-type=config_center,registry_center,meta_center
-# \u914D\u7F6E\u4E2D\u5FC3\u7C7B\u578B
-spring.shardingsphere.orchestration.demo_ds_sharding.instance-type=zookeeper
-# \u8FDE\u63A5\u6CE8\u518C\u4E2D\u5FC3\u670D\u52A1\u5668\u7684\u5217\u8868
-spring.shardingsphere.orchestration.demo_ds_sharding.server-lists=127.0.0.1:2181
-# \u6CE8\u518C\u4E2D\u5FC3\u7684\u547D\u540D\u7A7A\u95F4
-spring.shardingsphere.orchestration.demo_ds_sharding.namespace=sharding-jdbc-config
-# \u672C\u5730\u914D\u7F6E\u662F\u5426\u8986\u76D6\u6CE8\u518C\u4E2D\u5FC3\u914D\u7F6E\u3002\u5982\u679C\u53EF\u8986\u76D6\uFF0C\u6BCF\u6B21\u542F\u52A8\u90FD\u4EE5\u672C\u5730\u914D\u7F6E\u4E3A\u51C6
-spring.shardingsphere.orchestration.demo_ds_sharding.props.overwrite=true
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.complex.sharding-columns=order_id
+spring.shardingsphere.sharding.tables.t_order_item.table-strategy.complex.algorithm-class-name=com.songjy.sharding.sphere.config.ShardingTableAlgorithm
 
 # \u6253\u5370SQL
 spring.shardingsphere.props.sql.show=true
