--- a/demo-sharding-sphere/pom.xml
+++ b/demo-sharding-sphere/pom.xml
@@ -84,6 +84,12 @@
 			<version>1.2.60</version>
 		</dependency>
 
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
